[gd_scene load_steps=10 format=2]

[ext_resource path="res://sceneList/demo22_shader/ui/pic/Rectangle 3891.svg" type="Texture" id=3]
[ext_resource path="res://sceneList/demo22_shader/ui/pic/GOGray.svg" type="Texture" id=4]
[ext_resource path="res://sceneList/demo22_shader/ui/pic/GOBlack.svg" type="Texture" id=5]
[ext_resource path="res://sceneList/demo22_shader/ui/script/TimingButton.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float buttonProgress = 0.0;
uniform float buttonMaxLen =0.6;
uniform float buttonRadius = 0.2;
uniform vec4  startColor = vec4(0.86,0.2196,0.2196,1);
uniform vec4 endColor = vec4(0.729,1,0,1);

uniform vec2 buttonShape =vec2(128,128);

varying vec2 pos;

void vertex() {
  pos = VERTEX;
  //pos = UV-vec2(0.5,0.5);
}


void fragment(){

	float refx = (pos.x - buttonShape.x /2.0)  / buttonShape.x ;
	float refy = (pos.y - buttonShape.y /2.0)  / buttonShape.x ;
	float currentLen = buttonMaxLen * buttonProgress / 2.0;
	vec4 color = vec4(0,0,0,0);
	if(abs(refx) <= currentLen){
		if((refy >0.0 && refy < buttonRadius) || (refy<=0.0 && refy > -buttonRadius)){
			color = (endColor - startColor) * buttonProgress + startColor;
		}
	}
	else if(abs(refx) > currentLen){
		float height = sqrt(
			pow(buttonRadius,2)-pow((abs(refx) - currentLen),2)
			);
		if(abs(refy) <= height){
			color = (endColor - startColor) * buttonProgress + startColor;
		}
	}
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/buttonProgress = 0.0
shader_param/buttonMaxLen = 0.75
shader_param/buttonRadius = 0.127
shader_param/startColor = Plane( 0.86, 0.2196, 0.2196, 1 )
shader_param/endColor = Plane( 0.729, 1, 0, 1 )
shader_param/buttonShape = Vector2( 460, 120 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec3 startColor = vec3(0.8,0.8,0.8);
uniform vec3 endColor = vec3(0,0,0);
uniform float maxColor = 127;
uniform float buttonProgress = 0.0;

void fragment(){
	vec4 inputColor = texture(TEXTURE, UV);
	vec3 inputColorRGB = vec3(inputColor.x,inputColor.y,inputColor.z);
	float factor = maxColor /255.0;
	
	vec3 currentColor = (endColor - startColor) * buttonProgress + startColor;
	
	COLOR = vec4(inputColorRGB/ vec3(factor,factor,factor) * currentColor,inputColor.a);

}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/startColor = Vector3( 0.5, 0.5, 0.5 )
shader_param/endColor = Vector3( 0, 0, 0 )
shader_param/maxColor = 127.0
shader_param/buttonProgress = 0.0

[node name="TimingButton" type="Control"]
margin_bottom = 120.0
rect_min_size = Vector2( 480, 120 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 7 )

[node name="BackgroundBlack" type="NinePatchRect" parent="."]
margin_right = 480.0
margin_bottom = 120.0
rect_min_size = Vector2( 370, 100 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 461.272, 123.487 )
patch_margin_left = 58
patch_margin_top = 49
patch_margin_right = 55
patch_margin_bottom = 51

[node name="CenterContainerTexture" type="CenterContainer" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="TextureButtonGreen" type="TextureButton" parent="CenterContainerTexture"]
material = SubResource( 6 )
margin_left = 10.0
margin_right = 470.0
margin_bottom = 120.0
mouse_filter = 1
texture_normal = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainerTexture"]
margin_left = 207.0
margin_top = 43.0
margin_right = 273.0
margin_bottom = 77.0
mouse_filter = 1

[node name="GoGray" type="TextureRect" parent="CenterContainerTexture/CenterContainer"]
material = SubResource( 8 )
margin_right = 66.0
margin_bottom = 34.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="GoBlack" type="TextureRect" parent="CenterContainerTexture/CenterContainer"]
visible = false
margin_right = 66.0
margin_bottom = 34.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="HScrollBar" type="HScrollBar" parent="."]
anchor_right = 0.033
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 168.0
margin_right = 456.16
margin_bottom = 128.0
max_value = 1.0
